samples/_failures_safe/1761449124_9c4a9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3492b938.c: In function ‘main’:
./samples/SAFE/__tmp_3492b938.c:169:12: error: missing terminating " character
  169 |     printf("Enter arithmetic expressions (
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3492b938.c:169:5: error: expected expression at end of input
  169 |     printf("Enter arithmetic expressions (
      |     ^~~~~~
./samples/SAFE/__tmp_3492b938.c:169:5: error: expected declaration or statement at end of input
